--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="library">
                 <div class="options">
                     <div class="lib-options nav-option">
-                        <img src="library_icon.png" alt="">
+                        <img src="assets/library_icon.png" alt="">
                         <a href="#">Your Library</a>
                     </div>
                     <div class="icons">
@@ -53,8 +53,8 @@
         <div class="main-content">
             <div class="sticky-nav">
                 <div class="sticky-nav-icons">
-                    <img src="backward_icon.png">
-                    <img src="forward_icon.png" class="hide">
+                    <img src="assets/backward_icon.png">
+                    <img src="assets/forward_icon.png" class="hide">
                 </div>
                 <div class="sticky-nav-options">
                     <button class="Badge nav-items hide">Explore Premium</button>
@@ -66,7 +66,7 @@
             <h2>Recently Played</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="card1img.jpeg" class="card-img">
+                    <img src="assets/card1img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
@@ -75,27 +75,27 @@
             <h2>Recently Played</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="card2img.jpeg" class="card-img">
+                    <img src="assets/card2img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
                 <div class="card">
-                    <img src="card3img.jpeg" class="card-img">
+                    <img src="assets/card3img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
                 <div class="card">
-                    <img src="card4img.jpeg" class="card-img">
+                    <img src="assets/card4img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
                 <div class="card">
-                    <img src="card2img.jpeg" class="card-img">
+                    <img src="assets/card2img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
                 <div class="card">
-                    <img src="card3img.jpeg" class="card-img">
+                    <img src="assets/card3img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
@@ -103,17 +103,17 @@
             <h2>Featured Charts</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="card5img.jpeg" class="card-img">
+                    <img src="assets/card5img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
                 <div class="card">
-                    <img src="card6img.jpeg" class="card-img">
+                    <img src="assets/card6img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
                 <div class="card">
-                    <img src="card2img.jpeg" class="card-img">
+                    <img src="assets/card2img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks</p>
                 </div>
@@ -126,11 +126,11 @@
             <div class="album"></div>
             <div class="player">
                 <div class="player-controls">
-                    <img src="player_icon1.png" class="player-control-icon">
-                    <img src="player_icon2.png" class="player-control-icon">
-                    <img src="player_icon3.png" class="player-control-icon" style="opacity: 1;height:2rem">
-                    <img src="player_icon4.png" class="player-control-icon">
-                    <img src="player_icon5.png" class="player-control-icon">
+                    <img src="assets/player_icon1.png" class="player-control-icon">
+                    <img src="assets/player_icon2.png" class="player-control-icon">
+                    <img src="assets/player_icon3.png" class="player-control-icon" style="opacity: 1;height:2rem">
+                    <img src="assets/player_icon4.png" class="player-control-icon">
+                    <img src="assets/player_icon5.png" class="player-control-icon">
                 </div>
                 <div class="playback-bar">
                     <span class="curr-time">00:00</span>
